Future Build 211
Application Changes:
- If a Gear object does not have a bonus node but is provided with a select value in data (ie a Camera with select='Rear-Facing'), this value will now be assigned to the Extra value. 
- Implemented bonuses for Spell Descriptors to Damage and Drain. Used by the Witness My Hate quality. The improvement type allows a comma-separated list of values; if a descriptor is wrapped in NOT (ie NOT(Area)), it will be prevented from being taken. Conversely, if a spell does not have the descriptor listed, it will not gain the bonus. 
- Spells now properly show bonuses to Damage provided by improvements.

Application Fixes:
- Fixed an issue with the Skills tab not showing properly when first creating a character.
- Fixed specialisations not properly being added to dicepool when firing weapons.
- Fixed a regression in the behaviour of shapeshifters in karmagen not automatically selecting 'Human' if the 'None' metavariant is selected.
- Fixed a regression in the behaviour of mastery qualities incorrectly counting towards used spells and karma.

Data Changes:
- Removed extraneous Magic Sense quality. Closes #4021
- Added support to the SR Missions 1.4 Rules customdata file for the ruling that vehicles without defined sensor functions receive them according to the rating of the sensor array. Closes #2206
- Fixed incorrect name of the aerodynamic molotov cocktail.
- Added conditions to taking the Witness My Hate quality.

Build 210
Application Fixes:
- Fixed behaviour of the Weapon Accessory mount checks to properly work with accessories that can occupy multiple slots when one of those slots is occupied.
- Fixed a regression in the behaviour of weapon accessories to ensure they properly save and load their ammoreplace property. Existing accessories that should have this property will need to be re-added.Closes #3947